Break latching if scrollable is at extent and scroll direction changes.

This cl changes timer-based wheel scroll latching to start a new scroll
sequence when no GSU from the current scroll sequence is consumed and
the coming wheel event has different scroll delta direction(s).

The reason for this fix is the following scenario:
Consider a scrollable div currently at its extent inside an unscrollable
viewport. If the user starts scrolling the div downward, the scrolling
will latch to the viewport and if there is no rubber-banding or glow
effect the user wouldn't notice this. Then if the user decides to scroll
the div upward within the same scroll sequence, the viewport will try to
scroll upward and again due to lack of overscroll notion the user would
see the scroll as ignored.

With this change the user would see the upward scrolling since direction
change would break the timer based latching and the new scroll sequence
will latch to the div.

Test: *.TimerBasedLatchingBreaksWithDirectionChange
Bug: 828751
Change-Id: I0a709aecc1363759a3b0e0622bac8cad72666014
Reviewed-on: https://chromium-review.googlesource.com/998316
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549701}
Former-commit-id: 81487d859688a8121fc415d258bfb845a0a07c8b