content/browser/renderer_host/input/mouse_wheel_phase_handler.cc
@@ -14,8 +14,7 @@ MouseWheelPhaseHandler::MouseWheelPhaseHandler(
     RenderWidgetHostViewBase* const host_view)
     : host_view_(host_view),
       mouse_wheel_end_dispatch_timeout_(kDefaultMouseWheelLatchingTransaction),
-      scroll_phase_state_(SCROLL_STATE_UNKNOWN),
-      initial_wheel_modifiers_(0) {}
+      scroll_phase_state_(SCROLL_STATE_UNKNOWN) {}
 
 void MouseWheelPhaseHandler::AddPhaseIfNeededAndScheduleEndEvent(
     blink::WebMouseWheelEvent& mouse_wheel_event,
@@ -51,7 +50,8 @@ void MouseWheelPhaseHandler::AddPhaseIfNeededAndScheduleEndEvent(
         // and the initial wheel event positions exceeds the maximum allowed
         // threshold or when the event modifiers have changed.
         if (!IsWithinSlopRegion(mouse_wheel_event) ||
-            HasDifferentModifiers(mouse_wheel_event)) {
+            HasDifferentModifiers(mouse_wheel_event) ||
+            ShouldBreakLatchingDueToDirectionChange(mouse_wheel_event)) {
           DispatchPendingWheelEndEvent();
         }
 
@@ -60,7 +60,9 @@ void MouseWheelPhaseHandler::AddPhaseIfNeededAndScheduleEndEvent(
           first_wheel_location_ =
               gfx::Vector2dF(mouse_wheel_event.PositionInWidget().x,
                              mouse_wheel_event.PositionInWidget().y);
-          initial_wheel_modifiers_ = mouse_wheel_event.GetModifiers();
+          initial_wheel_event_ = mouse_wheel_event;
+          first_scroll_update_ack_state_ =
+              FirstScrollUpdateAckState::kNotArrived;
           ScheduleMouseWheelEndDispatching(should_route_event,
                                            mouse_wheel_end_dispatch_timeout_);
         } else {  // mouse_wheel_end_dispatch_timer_.IsRunning()
@@ -180,8 +182,39 @@ bool MouseWheelPhaseHandler::HasDifferentModifiers(
   // latching sequence is needed or not, and timer-based wheel scroll latching
   // happens only when scroll state is unknown.
   DCHECK(scroll_phase_state_ == SCROLL_STATE_UNKNOWN);
+  return wheel_event.GetModifiers() != initial_wheel_event_.GetModifiers();
+}
+
+bool MouseWheelPhaseHandler::ShouldBreakLatchingDueToDirectionChange(
+    const blink::WebMouseWheelEvent& wheel_event) const {
+  // This function is called to check if breaking timer-based wheel scroll
+  // latching sequence is needed or not, and timer-based wheel scroll latching
+  // happens only when scroll state is unknown.
   DCHECK(scroll_phase_state_ == SCROLL_STATE_UNKNOWN);
-  return wheel_event.GetModifiers() != initial_wheel_modifiers_;
+  if (first_scroll_update_ack_state_ != FirstScrollUpdateAckState::kNotConsumed)
+    return false;
+
+  bool consistent_x_direction =
+      (wheel_event.delta_x == 0 && initial_wheel_event_.delta_x == 0) ||
+      wheel_event.delta_x * initial_wheel_event_.delta_x > 0;
+  bool consistent_y_direction =
+      (wheel_event.delta_y == 0 && initial_wheel_event_.delta_y == 0) ||
+      wheel_event.delta_y * initial_wheel_event_.delta_y > 0;
+  return !consistent_x_direction || !consistent_y_direction;
+}
+
+void MouseWheelPhaseHandler::GestureEventAck(
+    const blink::WebGestureEvent& event,
+    InputEventAckState ack_result) {
+  if (event.GetType() != blink::WebInputEvent::kGestureScrollUpdate ||
+      first_scroll_update_ack_state_ !=
+          FirstScrollUpdateAckState::kNotArrived) {
+    return;
+  }
+  if (ack_result == INPUT_EVENT_ACK_STATE_CONSUMED)
+    first_scroll_update_ack_state_ = FirstScrollUpdateAckState::kConsumed;
+  else
+    first_scroll_update_ack_state_ = FirstScrollUpdateAckState::kNotConsumed;
 }
 
 }  // namespace content
