content/browser/renderer_host/render_widget_host_view_aura.cc
@@ -979,6 +979,7 @@ void RenderWidgetHostViewAura::GestureEventAck(
       host()->StopFling();
     }
   }
+  event_handler_->GestureEventAck(event, ack_result);
 }
 
 void RenderWidgetHostViewAura::ProcessAckedTouchEvent(
